# strratio

./: .gitignore  CMakeLists.txt  README.md
example/: example.cpp
include/: strratio.hpp
